code/web/interface/themes/responsive/css/main.css
/* ... */
.overdueLabel {
  color: #c62828;
  font-weight: bold;
}
.return_claim {
  color: #2e7d32;
  font-weight: bold;
}
.holdDisclaimerLibrary {
  font-weight: bold;
}
#contactUpdateForm .btn-group .btn-default.active {
  background-color: #3174AF;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: #fff;
}
#library-barcode {
  text-align: center;
  font-weight: bold;
}
#library-barcode-svg {
  max-width: 100%;
}
.refresh-indicator {
  font-size: 85%;
  float: right !important;
  margin-right: 6px;
  margin-top: 6px;
}
/**
 * Additional Styling related to the help system
 */
.faqQuestion {
  font-size: medium;
  color: blue;
  font-weight: bold;
  margin-top: 15px;
}
.faqAnswer {
  font-size: small;
  font-style: italic;
  margin-left: 1em;
}
.wikipedia_image {
  margin: 0 10px 10px;
}
@media (min-width: 767px) {
  .wikipedia_image {
    float: left;
  }
}
@media (max-width: 767px) {
  .wikipedia_image {
    display: block;
    margin: 0 auto 10px;
  }
}
.titleScrollerHeader {
  background-color: #4dacde;
  padding: 2px;
  color: white;
  font-size: 12px;
  font-weight: bold;
  height: 20px;
}
.titleScrollerHeader .linkTab {
  padding-right: 10px;
  float: left;
}
.titleScrollerHeader .linkTab .first {
  padding-right: 0;
}
.titleScrollerViewMore {
  padding-right: 5px;
  float: right;
}
#listSelection {
  border: none;
  background: none;
  color: #00125E;
}
.titleScrollerBody {
  background-color: #fff;
  clear: both;
  position: relative;
}
.leftScrollerButton,
.rightScrollerButton {
  display: inline-block;
  height: 135px;
  line-height: 135px;
  vertical-align: middle;
  width: 25px;
  float: left;
  cursor: pointer;
  margin-left: 5px;
  margin-top: 5px;
  zoom: 1;
  *display: inline;
}
.leftScrollerButton {
  float: left;
  margin-left: 5px;
}
.rightScrollerButton {
  float: right;
  margin-right: 5px;
  z-index: 100;
}
.scrollerButtonUp,
.scrollerButtonDown {
  z-index: 100;
  position: absolute;
  height: 25px;
  width: 148px;
  cursor: pointer;
  text-align: center;
}
.scrollerButtonUp {
  top: 0;
  left: 0;
}
.scrollerButtonDown {
  bottom: 0;
  left: 0;
}
.titleScrollerSelectedTitle {
  width: 100%;
  text-align: center;
  font-weight: bold;
  color: #00125E;
}
.titleScrollerSelectedAuthor {
  width: 100%;
  text-align: center;
  font-weight: bold;
  color: #A9A9A9;
}
.scrollerBodyContainer {
  position: relative;
  overflow: hidden;
  margin: 5px 40px;
}
.scrollerBody {
  padding: 7px;
  margin: 0 7px;
  height: 140px;
  position: relative;
}
.scrollerWithRatings .scrollerBody {
  height: 155px;
}
.scrollerLoadingContainer {
  width: 100%;
  padding-top: 40px;
  text-align: center;
}
.scrollerTitleCover {
  width: auto;
  height: auto;
  max-width: 125px;
  max-height: 125px;
  padding: 3px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}
.collectionSpotlightSelector {
  width: 100%;
  text-align: right;
}
.horizontalCarouselSpotlightWrapper .jcarousel-control-prev,
.horizontalCarouselSpotlightWrapper .jcarousel-control-next {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  color: #d4d4d4;
  height: 100%;
  font-size: 50px;
  box-shadow: none;
}
.horizontalCarouselSpotlightWrapper .jcarousel-control-prev:focus,
.horizontalCarouselSpotlightWrapper .jcarousel-control-next:focus {
  text-decoration: none;
  outline: none;
}
.horizontalCarouselSpotlightWrapper .jcarousel-control-prev:hover,
.horizontalCarouselSpotlightWrapper .jcarousel-control-next:hover {
  text-decoration: none;
}
.horizontalCarouselSpotlightWrapper .jcarousel-pagination a,
.horizontalCarouselSpotlightWrapper .jcarousel-pagination a:hover,
.horizontalCarouselSpotlightWrapper .jcarousel-pagination a:active,
.horizontalCarouselSpotlightWrapper .jcarousel-pagination a:visited {
  outline: none;
}
.jcarousel li.carouselTitleWrapper {
  border-width: 0;
}
.carouselScrollerTitle {
  display: inline-block;
  text-align: center;
  width: 100%;
}
.carouselScrollerTitle a {
  display: block;
}
.carouselScrollerTitle .carouselScrollerTitleImage {
  position: relative;
  height: 200px;
}
.scrollerTitle {
  display: inline-block;
  margin: 2px;
  vertical-align: middle;
  padding: 3px;
  max-width: 129px;
  zoom: 1;
  *display: inline;
}
.scrollerTitle img {
  opacity: 0.6;
}
.scrollerTitle:hover img {
  opacity: 0.8;
}
.scrollerTitle.selected {
  border: 3px solid #00125E;
  border-radius: 3px;
  padding: 0;
}
.scrollerTitle.selected img {
  opacity: 1;
}
.verticalTitleScroller {
  width: 150px;
  height: 100%;
}
.verticalTitleScroller .titleScrollerBody {
  position: relative;
  overflow: hidden;
}
.verticalTitleScroller .scrollerTitle {
  display: block;
}
.verticalTitleScroller .scrollerBodyContainer {
  margin: 5px;
  text-align: center;
}
.singleTitleSpotlight {
  width: 200px;
}
.singleTitleSpotlight .scrollerTitle img {
  display: inline-block;
  opacity: 1;
}
.singleTitleSpotlight .scrollerTitle.selected img {
  display: inline-block;
}
.singleTitleSpotlight .scrollerTitle.selected {
  border: 0 solid black;
  border-radius: 3px;
  padding: 0;
}
.singleTitleSpotlight .scrollerBodyContainer {
  margin: 5px 0;
  text-align: center;
  width: 100%;
}
.singleTitleWithNextSpotlight {
  width: 200px;
}
.singleTitleWithNextSpotlight .scrollerTitle img {
  display: inline-block;
  opacity: 1;
}
.singleTitleWithNextSpotlight .scrollerTitle.selected img {
  display: inline-block;
}
.singleTitleWithNextSpotlight .scrollerTitle.selected {
  border: 0 solid black;
  border-radius: 3px;
  padding: 0;
}
.singleTitleWithNextSpotlight .scrollerBodyContainer {
  margin: 5px 0;
  text-align: center;
  width: 100%;
}
.singleTitleWithNextSpotlight .rightScrollerButton {
  float: none;
  position: absolute;
  right: 5px;
}
.textListScroller {
  width: 100%;
  height: 100%;
}
.textListScroller .scrollerBodyContainer {
  margin: 5px;
}
.textListScroller .scrollerTitle {
  max-width: none;
  display: block;
}
/* ... */

